--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,14 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+input,
+textarea,
+select {
+  color: #535353;
+}
+
+input::placeholder,
+textarea::placeholder {
+  color: #bbbcbe;
+}
